<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".RateUsActivity">


    <LinearLayout
        android:id="@+id/centerGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/costal"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/rateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_apali_bhas"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>



    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/centerGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:numStars="5"
        android:stepSize="1.0" />

    <EditText
        android:id="@+id/feedbackInput"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_below="@id/ratingBar"
        android:layout_margin="24dp"
        android:background="@drawable/edittext_background"
        android:gravity="top"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        android:hint="@string/leave_your_feedback_optional"
        android:inputType="textMultiLine"
        android:padding="12dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedbackInput"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/main_core"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</RelativeLayout>
