<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".fragments.ProfileFragment">


    <LinearLayout
        android:id="@+id/centerGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/costal"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/rateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile1"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contentGroup"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/centerGroup"
        app:layout_constraintVertical_bias="0.053">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile" />
    </LinearLayout>

    <Button
        android:id="@+id/profile"
        android:layout_width="375dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:backgroundTint="@color/costal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentGroup"
        app:layout_constraintVertical_bias="0.066" />


    <Button
        android:id="@+id/about_us"
        android:layout_width="375dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:backgroundTint="@color/costal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/rate_us"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/rate_us"
        android:textColor="@color/white"
        android:backgroundTint="@color/costal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_us"
        app:layout_constraintVertical_bias="0.066" />


</androidx.constraintlayout.widget.ConstraintLayout>
